@@ -1,3 +1,10 @@
+2012-04-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/hc08/gen.c: Fixed bug with cpx use. Optimize stack adjustments
+	  of +/-1. Use mov #0 instead of clr with volatile operands to avoid
+	  read side effect. Avoid using x as stack frame base unless it saves
+	  clock cycles.
+
 2012-04-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCicode.c,
@@ -5,7 +12,7 @@
 	  src/z80/gen.c:
 	  GET_VALUE_AT_ADDRESS with offset for z80, z180 and r2k.
 
-2012-04-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+2012-04-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/hc08/gen.c: Index stack frame via x instead of sp when convenient
 
